<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@mipmap/green"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.AdminSettingInformation">

    <ImageView
        android:id="@+id/imageView_Admin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/pi2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/admin_register_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/user_register_lastname"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/admin_edit_register_lastName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/admin_register_lastname"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/admin_register_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/admin_register_firstname"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/admin_edit_register_firstName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/admin_register_lastname"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/admin_register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/admin_register_email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/admin_edit_register_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_admin_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/user_register_password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/admin_edit_register_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/admin_register_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/admin_register_conform_password"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/admin_register_conform_password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/admin_edit_register_conform_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/admin_register_conform_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/admin_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:background="@drawable/type_button"
            android:onClick="UpdateInformation"
            android:text="@string/update" />

        <Button
            android:id="@+id/user_article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:background="@drawable/type_button"
            android:text="article" />

        <Button
            android:id="@+id/admin_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/type_button"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>