<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/university"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/pi2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/user_register_lastname"
            android:background="@color/transparent_db"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_lastName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_lastname"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/transparent_db"
            android:text="@string/user_register_firstname"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_firstName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_firstname"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/transparent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/user_register_email"
            android:background="@color/transparent_db"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/user_register_password"
            android:background="@color/transparent_db"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/testView_Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@string/user_register_age"
            android:background="@color/transparent_db"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_age"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_age"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="270dp"
            android:text="@string/user_register_address"
            android:background="@color/transparent_db"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_edit_register_line1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/transparent_db"
        android:hint="@string/user_register_line1"
        android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_edit_register_line2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_line2"
            android:background="@color/transparent_db"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_edit_register_line3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_line3"
            android:background="@color/transparent_db"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/user_register_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/type_button"
            android:text="@string/user_register_submit" />
    </LinearLayout>
</LinearLayout>