<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/ice"
    android:layout_height="match_parent"
    tools:context=".User.UserSettingInformation">

    <ImageView
        android:id="@+id/imageView_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/pi2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/user_register_lastname"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_lastName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_lastname"
            android:textStyle="bold"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"

            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/user_register_firstname"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_firstName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_firstname"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/user_register_email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/user_register_password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/testView_Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:text="@string/user_register_age"
            android:layout_marginStart="5dp"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/user_edit_register_age"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_age"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_register_address"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="250dp"
            android:background="@color/transparent_db"
            android:text="@string/user_register_address"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_edit_register_line1"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:ems="10"
            android:hint="@string/user_register_line1"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_edit_register_line2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:ems="10"
            android:hint="@string/user_register_line2"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user_edit_register_line3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_register_line3"
            android:background="@color/transparent_db"
            android:textStyle="bold"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/user_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/type_button"
            android:text="Back" />


        <Button
            android:id="@+id/user_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/type_button"
            android:layout_marginEnd="20dp"
            android:keyboardNavigationCluster="false"
            android:onClick="UpdateInformation"
            android:text="@string/update" />

        <Button
            android:id="@+id/user_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/type_button"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>