<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/pink"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView_admin_register"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:src="@mipmap/pi2" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="38dp"
        android:background="@drawable/linearlayoutbackground"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Register_As"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/choose_role"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayoutbackground"
            android:contextClickable="true"
            android:entries="@array/Role"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/linearlayoutbackground"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/testView_Email"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginEmailTextInputLayout"
            android:layout_width="200dp"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailTextInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/testView_Email"
                android:inputType="textEmailAddress"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/linearlayoutbackground"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/testView_Password"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordTextInputLayout"
            android:layout_width="200dp"
            android:layout_height="60dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordTextInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/testView_Password"
                android:inputType="textEmailAddress"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:textSize="10sp"
            android:background="@drawable/type_button"
            android:text="@string/textView_Forgotten"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:background="@drawable/type_button"
            android:text="@string/textView_Register"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/type_button"
            android:text="@string/textView_Sign" />
    </LinearLayout>
</LinearLayout>